first day final commit

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
         <!-- Right Content Section -->
         <div class="content" id="mainContent">
-            <h2>Welcome to Code With Asma</h2>
+            <h2>Welcome !....</h2>
             <H3>Asma Shaikh</H3>
             <h3>SDE III JAVA | Spring Boot | Microservice | DSA | System Design</h3>
             
