--- a/index.html
+++ b/index.html
@@ -53,13 +53,19 @@
                         <li>Resume Building & Interview Preparation</li>
                     </ol>
                 </div>
+
                 <div class="pdf-container">    
                     <iframe class="pdf-container" src="Topics.pdf#toolbar=0&toolbar=0"></iframe>
                 </div>
             </div>
         </div>
     </div>
-
+    <script>
+        document.addEventListener("contextmenu", function(event) {
+            event.preventDefault();
+        });
+    </script>
+        
     <script>
         function handleCredentialResponse(response) {
             const responsePayload = JSON.parse(atob(response.credential.split('.')[1]));
@@ -171,11 +177,17 @@
             justify-content: center; /* Center horizontally */
             lign-items: center; /* Center vertically */
             background-color: transparent; /* Remove any unwanted background */
+            pointer-events: none;
+            user-select: none;
         }
         .pdf-container iframe {
              width: 100%;
             height: 100%;
             border: none;
+        }
+        .pdf-wrapper {
+            pointer-events: none; /* Disables user interactions */
+            user-select: none; /* Prevents selection */
         }
     </style>
 
