first day final commit

--- a/index.html
+++ b/index.html
@@ -171,7 +171,8 @@
             .pdf-container {
             width: 200%; /* Make it occupy full width */
             max-width: 1500px; /* Set a reasonable max width */
-            height: 80vh; /* Adjust height to fit screen */
+            height: 100vh; /* Adjust height to fit screen */
+            overflow: auto; /* Enable scrolling */
             border: none; /* Remove border */
             display: flex;
             justify-content: center; /* Center horizontally */
